--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,9 @@ body {
 	height: 100px;
 	margin: 1em;
 }
+
+button {
+	border: none;
+	color: blanchedalmond;
+	background-color: rgba(0, 102, 255, 0.548);
+}
